--- a/app/source/html/activities/serviceProfessionalService.html
+++ b/app/source/html/activities/serviceProfessionalService.html
@@ -36,7 +36,7 @@
 <!-- end: choose job title -->
                 <div data-bind="foreach: groupedServices">
                     <h2 class="SectionTitle" data-bind="visible: !$root.isAdditionMode()">
-                        <span data-bind="text: $root.servicePrefix() + label"></span>
+                        <span data-bind="text: $root.servicePrefix() + pluralLabel"></span>
                     </h2>
                     <!-- ko foreach: visibilityCategories -->
                         <h3 class="TileListTitle" data-bind="text: 'For ' + label"></h3>
