--- a/app/source/html/activities/serviceProfessionalService.html
+++ b/app/source/html/activities/serviceProfessionalService.html
@@ -31,7 +31,7 @@
                     <h2 class="SectionTitle" data-bind="visible: !$root.isAdditionMode()">
                         <span data-bind="text: group"></span>
                     </h2>
-                    <ul class="TilesList" data-bind="foreach: pricing">
+                    <ul class="TilesList" data-bind="foreach: services">
                         <li>
                             <a href="#" class="ItemTile" data-bind="click: $root.tapService" role="button">
                                 <div class="Tile-marker">
